# lystn-cli

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
Formula/: lystn.rb
cli-rs/: Cargo.toml
cli-rs/src/: api.rs  audio.rs  clean.rs  commands.rs  config.rs  hook.rs  install.rs  login.rs  main.rs  statusline.rs  test.rs  ui.rs
scripts/: postinstall.js
